# opentrons-modules

./: .clang-tidy  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  FindClang.cmake  FindGDBSVDTools.cmake  FindOpenOCD.cmake  FindSTM32F303BSP.cmake  FindSTM32G491RE.cmake  FindSTM32G4xx.cmake  Makefile  README.md  STM32CortexM33GCCCrossToolchain.cmake  STM32CortexM4GCCCrossToolchain.cmake  STM32GCCCrossToolchain.cmake  package.json
arduino-modules/mag-deck/: CMakeLists.txt  README.md
arduino-modules/mag-deck/QC/: test_mag_deck_UP_DOWN.py
arduino-modules/mag-deck/mag-deck-arduino/: gcodemagdeck.cpp  motion.h
arduino-modules/temp-deck/: CMakeLists.txt  README.md
arduino-modules/temp-deck/temp-deck-arduino/: gcode.cpp  temp-deck-arduino.ino  thermistor.cpp  thermistor.h
arduino-modules/thermo-cycler/: CMakeLists.txt
arduino-modules/thermo-cycler/thermo-cycler-arduino/: CMakeLists.txt  fan.cpp  fan.h  gcode.cpp  high_frequency_pwm.h  lid.h  lights.cpp  lights.h  peltiers.cpp  peltiers.h  tc_timer.cpp
cpp-utils/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cpp-utils/.github/workflows/: cpp-utils.yaml
cpp-utils/cmake/: Arduino.cmake  FindCatch2.cmake  FindFakeIt.cmake  FindFreeRTOS.cmake  FindGDBSVDTools.cmake  FindSTM32L5xx.cmake  VersionForProject.cmake
cpp-utils/src/: CMakeLists.txt  fixed_point.cpp  pid.cpp
cpp-utils/tests/: CMakeLists.txt  test_bit_utils.cpp  test_fixed_point.cpp  test_message_utils.cpp  test_synchronization.cpp
src/: logging.cpp
stm32-modules/: CMakeLists.txt  README.md
stm32-modules/common/: CMakeLists.txt  README.md
stm32-modules/common/STM32F303/: CMakeLists.txt  STM32F303RETx_FLASH.ld  clear_wp_stm32f303.cfg  gdbinit.template  lock_stm32f303.cfg  startup_hal.c  startup_hal.h  startup_stm32f303xe.s  startup_system_stm32f3xx.c  stm32f3xx_hal_conf.h  unlock_stm32f303.cfg
stm32-modules/common/STM32G491/: CMakeLists.txt  STM32G491VETx_FLASH.ld  clear_wp_stm32g491.cfg  gdbinit.template  lock_stm32g491.cfg  startup_hal.c  startup_hal.h  startup_stm32g491vetx.s  startup_system_stm32g4xx.c  startup_system_stm32g4xx.h  unlock_stm32g491.cfg
stm32-modules/common/module-startup/: CMakeLists.txt  README.md  STM32_MODULE_STARTUP.ld  module-startup.S  startup_checks.c  startup_checks.h  startup_it.c  startup_jumps.c  startup_jumps.h  startup_main.c  startup_memory.c  startup_memory.h
stm32-modules/common/simulator/: CMakeLists.txt
stm32-modules/common/src/: CMakeLists.txt  fixed_point.cpp  generate_thermistor_table.py  ks103j2.csv  nxft15xv103fa2b030.csv  pid.cpp  thermistor_conversion.cpp  xt1511.cpp
stm32-modules/common/tests/: CMakeLists.txt  test_ads1115.cpp  test_at24c0xc.cpp  test_bit_utils.cpp  test_double_buffer.cpp  test_fixed_point.cpp  test_gcode_parse.cpp  test_generic_timer.cpp  test_is31fl_driver.cpp  test_m24128.cpp  test_mailbox.cpp  test_pid.cpp  test_queue_aggregator.cpp  test_thermistor_conversions.cpp  test_ws2812.cpp  test_xt1511.cpp
stm32-modules/flex-stacker/: CMakeLists.txt
stm32-modules/flex-stacker/firmware/: CMakeLists.txt  main.cpp
stm32-modules/flex-stacker/simulator/: CMakeLists.txt
stm32-modules/flex-stacker/src/: CMakeLists.txt  errors.cpp  motor_utils.cpp  version.cpp.in
stm32-modules/flex-stacker/tests/: CMakeLists.txt
stm32-modules/heater-shaker/: CMakeLists.txt  README.md
stm32-modules/heater-shaker/firmware/: CMakeLists.txt  FreeRTOSConfig.h  STM32F303RETx_FLASH.ld  freertos_comms_task.cpp  freertos_heater_task.cpp  freertos_idle_timer_task.cpp  freertos_motor_task.cpp  freertos_ui_task.cpp  gdbinit.template  heater_control_task.cpp  host_comms_control_task.cpp  main.cpp  motor_control_task.cpp  startup_stm32f303xe.s  stm32f3xx_hal_conf.h  stm32f3xx_it.c  system_stm32f3xx.c  system_stm32f3xx.h  ui_control_task.cpp  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h
stm32-modules/heater-shaker/include/: systemwide.h  systemwide.hpp
stm32-modules/heater-shaker/scripts/: .gitignore  README.md  heater_profiling.py  heater_stability.py  requirements.txt  rpm_data.py  speed_stability.py  test_utils.py
stm32-modules/heater-shaker/simulator/: CMakeLists.txt  cli_parser.cpp  comm_thread.cpp  heater_thread.cpp  main.cpp  motor_thread.cpp  sim_driver.cpp  socket_sim_driver.cpp  stdin_sim_driver.cpp  system_thread.cpp  ui_thread.cpp
stm32-modules/heater-shaker/src/: CMakeLists.txt  errors.cpp  gcode_parser.cpp  generate_thermistor_table.py  ntcg104ed104dtdsx.csv  pid.cpp  putchar.c  thermistor_conversion.cpp  version.cpp.in
stm32-modules/heater-shaker/tests/: CMakeLists.txt  putchar.c  task_builder.cpp  test_ack_cache.cpp  test_basic_gcodes.cpp  test_errors.cpp  test_flash.cpp  test_g28d.cpp  test_gcode_parse.cpp  test_gcodes.cpp  test_heater_policy.cpp  test_heater_task.cpp  test_host_comms_task.cpp  test_m104.cpp  test_m104d.cpp  test_m105.cpp  test_m105d.cpp  test_m106.cpp  test_m115.cpp  test_m116.cpp  test_m117.cpp  test_m123.cpp  test_m124.cpp  test_m240d.cpp  test_m241.cpp  test_m241d.cpp  test_m242.cpp  test_m243.cpp  test_m3.cpp  test_m301.cpp  test_m994.cpp  test_m994d.cpp  test_m995.cpp  test_m996.cpp  test_main.cpp  test_message_passing.cpp  test_motor_policy.cpp  test_motor_task.cpp  test_pid.cpp  test_system_policy.cpp  (+3 more)
stm32-modules/include/flex-stacker/: systemwide.h
stm32-modules/include/heater-shaker/: systemwide.h
stm32-modules/include/tempdeck-gen3/: systemwide.h
stm32-modules/include/thermocycler-refresh/: systemwide.h
stm32-modules/stacker/: CMakeLists.txt
stm32-modules/stacker/firmware/: CMakeLists.txt
stm32-modules/stacker/simulator/: main.cpp
stm32-modules/stacker/src/: CMakeLists.txt  errors.cpp
stm32-modules/tempdeck-gen3/: CMakeLists.txt  README.md
stm32-modules/tempdeck-gen3/firmware/: CMakeLists.txt  README.md  main.cpp
stm32-modules/tempdeck-gen3/scripts/: README.md  requirements.txt  test_temperature.py  test_utils.py  thermal_profiling.py  thermal_stability.py
stm32-modules/thermocycler-gen2/: CMakeLists.txt  README.md
stm32-modules/thermocycler-refresh/: CMakeLists.txt  README.md
(+896 files in other folders)
